# ai-paper-review

./: .gitignore  README.md  config.example.yaml  environment.yml  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: aggregation.md  database_format.md  llm_providers.md  review_output_format.md  review_pipeline.md  validation_output_format.md  validation_pipeline.md
src/ai_paper_review/: __init__.py  provenance.py
src/ai_paper_review/aggregation/: __init__.py  aggregation.py
src/ai_paper_review/data/: __init__.py  comparch_reviewer_cfg.yaml  comparch_reviewer_db.md
src/ai_paper_review/database/: __init__.py  comparch_reviewer_cfg.yaml  comparch_reviewer_db.md  generation.py  mlai_reviewer_cfg.yaml  mlai_reviewer_db.md
src/ai_paper_review/llm/: __init__.py  __main__.py  config.py  factory.py  probing.py  retrying.py  utils.py
src/ai_paper_review/llm/clients/: __init__.py  anthropic.py  base.py  claude.py  copilot.py  google.py  openai.py  xai.py
src/ai_paper_review/prompts/: __init__.py  batch_alignment_system.md  batch_alignment_user.md  database_generation.md  human_review_extraction_system.md  markdown_repair_system.md  markdown_repair_user.md  shared_reviewer_system.md  writing_clarity_system.md
src/ai_paper_review/review/: __init__.py  clarity.py  clustering.py  constants.py  parsing.py  pdf_ingestion.py  ranking.py  review.py  reviewer_db.py  reviewer_dispatching.py  selection.py
src/ai_paper_review/validation/: __init__.py  alignment.py  calibration.py  constants.py  conversion.py  loading.py  metrics.py  reporting.py  routing.py  validation.py
src/ai_paper_review/web/: __init__.py  aggregation.py  app.py  databases.py  docs.py  jobs.py  model.py  review.py  run_files.py  validation.py
src/ai_paper_review/web/static/: style.css
src/ai_paper_review/web/templates/: about.html  aggregation.html  base.html  database.html  docs_index.html  docs_view.html  index.html  model_settings.html  review_result.html  review_status.html  reviewer_detail.html  reviewers.html  validation.html  validation_result.html  validation_status.html
tests/: conftest.py  test_convert.py  test_llm.py  test_provenance.py  test_validate.py  test_web.py
tests/fixtures/: actual.md  ai.md
